new driv (reverted from commit 83ddfbb19c9602982ace41c7c7b252b4a183a0c2)

--- a/Sdber/App.config
+++ b/Sdber/App.config
@@ -5,7 +5,7 @@
     
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" /></configSections>
   <connectionStrings>
     <add name="Wilco" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=OpenDb;Persist Security Info=True;User ID=sa;Password=Tsunami9" />
     <!-- <add name="Wilco" connectionString="User Id=postgres;Password=Tsunami9;Host=localhost;Database=opendb;Persist Security Info=True;Initial Schema=public;Transaction Scope Local=True;Unicode=True;" /> -->
@@ -87,4 +87,6 @@
     <!-- this is part of URL which would point to DataSets discovery services -->
     <add key="OpenLink.ServiceUrl" value="" />
   </appSettings>
-</configuration>
+<specFlow>
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /></specFlow></configuration>
