--- a/SDBGer/App.config
+++ b/SDBGer/App.config
@@ -24,6 +24,7 @@
     
     <appSettings>
         <add key="TestsPath" value="c:\open\Source\Wilco.UITest\Wilco.UITest.Spec\bin\Debug\Wilco.UITest.Spec.dll" />
+        <add key="TestsProjectPath" value="c:\open\Source\Wilco.UITest\Wilco.UITest.Spec\" />
     </appSettings>
 <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
