--- a/SDBGer/SDBGer.csproj
+++ b/SDBGer/SDBGer.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Console.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Runner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
