Added Load, Release, Run, BeforeFeature and BeforeScenario buttons.

--- a/SDBGerUI/App.config
+++ b/SDBGerUI/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="TestsPath" value="c:\open\Source\Wilco.UITest\Wilco.UITest.Spec\bin\Debug\Wilco.UITest.Spec.dll" />
+    <add key="TestsProjectPath" value="c:\open\Source\Wilco.UITest\Wilco.UITest.Spec\Wilco.UITest.Spec.csproj" />
+  </appSettings>
 </configuration>
