#2: Added async running of command. Code refactored.

--- a/SDBGer/SDBGer.csproj
+++ b/SDBGer/SDBGer.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionExtensions.cs" />
+    <Compile Include="RunnerManager.cs" />
     <Compile Include="SolutionBuilder.cs" />
     <Compile Include="SpecflowManager.cs" />
     <Compile Include="RunningData.cs" />
