--- a/SDBGerUI/SDBGerUI.csproj
+++ b/SDBGerUI/SDBGerUI.csproj
@@ -33,6 +33,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <Win32Resource>
+    </Win32Resource>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>specbug.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -99,6 +106,12 @@
       <Project>{78d9c447-e92c-4b89-ab45-71566dd1921e}</Project>
       <Name>SDBGer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="specbug.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="specbug.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
